--- a/models/yolov5s_custom.yaml
+++ b/models/yolov5s_custom.yaml
@@ -2,7 +2,7 @@
 
 # Parameters
 nc: 80  # number of classes
-ch: 7
+ch: 7 # channel
 depth_multiple: 0.33  # model depth multiple
 width_multiple: 0.50  # layer channel multiple
 anchors:
